assets/styles.css
:root {
    --bg-color: #ffffff;
    --bg-secondary-color: #f3f3f6;
    --color-primary: orange;
    --color-lightGrey: #d2d6dd;
    --color-grey: #747681;
    --color-darkGrey: #3f4144;
    --color-error: #d43939;
    --color-success: #28bd14;
    --grid-maxWidth: 120rem;
    --grid-gutter: 2rem;
    --font-size: 1.6rem;
    --font-color: #333333;
    --font-family-sans: sans-serif;
    --font-family-mono: monaco, "Consolas", "Lucida Console", monospace;
}

body {
    font-family: monospace;
    letter-spacing: -0.9px;
}

main.container {
    margin-top: 4rem;
    margin-bottom: 4rem;
}

h1 + .subtitle {
    margin-top: -2.4rem;
    font-size: 1.4rem;
}

h1 ~ .created-at {
    font-size: 1.4rem;
}

/* Dark mode */
body.dark {
    --bg-color: #111;
    --bg-secondary-color: #131316;
    --font-color: #f5f5f5;
    --color-grey: #ccc;
    --color-darkGrey: #777;
}

